--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -5,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./sass/index.scss" />
 </head>
 
 <body>
+
     <form class="search-form" id="search-form">
         <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
         <button type="submit">Search</button>
@@ -18,6 +21,8 @@
     </div>
 
     <button type="button" class="load-more">Load more</button>
+
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
